objects/ssot__WebsiteWebStore__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__CreatedDate__c</fullName>
        <label>Created Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Website Web Store Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LastModifiedDate__c</fullName>
        <label>Last Modified Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__WebStoreId__c</fullName>
        <label>Web Store</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__WebsiteId__c</fullName>
        <label>Website</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1702009485923_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>WebsiteWebStore_WebStoreId_map_WebSt_rel</label>
        <referenceTo>ssot__WebStore__dlm</referenceTo>
        <relationshipLabel>WebsiteWebStore_WebStoreId_map_WebSt_rel</relationshipLabel>
        <relationshipName>rel_1702009485923_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>